@@ -1,5 +1,6 @@
 plugins
 {
+    id 'java'
     id 'application'
 }
 
@@ -14,6 +15,10 @@ mainClassName = 'com.godaddy.libplugtest.Main'
 jar {
     archiveBaseName = 'libplugtest'
     archiveVersion = '0.1.0'
+}
+
+application {
+    applicationDefaultJvmArgs = [ '--add-modules=jdk.incubator.foreign', '--enable-native-access=ALL-UNNAMED' ]
 }
 
 compileJava.configure {
